# internal/infrastructure/database/sqlc/querier.go
@@ -17,22 +17,26 @@ type Querier interface {
 	//    latitude, longitude, country, created_at, updated_at)
 	//  VALUES($1, $2, $3, $4, $5, $6, $7, $8, $9, $10, $11, $12, $13, $14, $15, $16, $17, NOW(), NOW())
 	CreateStore(ctx context.Context, arg CreateStoreParams) error
+	//DeleteBusinessHours
+	//
+	//  DELETE FROM business_hour
+	//  WHERE store_id = $1
+	//    AND week_day = $2
+	//    AND opening_time = $3
+	//    AND closing_time = $4
+	DeleteBusinessHours(ctx context.Context, arg []DeleteBusinessHoursParams) *DeleteBusinessHoursBatchResults
+	//GetStoreBusinessHoursByID
+	//
+	//  SELECT week_day, opening_time, closing_time
+	//  FROM business_hour
+	//  WHERE store_id = $1
+	//  ORDER BY week_day
+	GetStoreBusinessHoursByID(ctx context.Context, storeID pgtype.UUID) ([]GetStoreBusinessHoursByIDRow, error)
 	//GetStoreByID
 	//
-	//  SELECT
-	//    id,
-	//    name,
-	//    phone,
-	//    score,
-	//    type,
-	//    address_line_1,
-	//    address_line_2,
-	//    neighborhood,
-	//    city,
-	//    state,
-	//    country
-	//  FROM store
-	//    WHERE id = $1
+	//  SELECT s.id, s.name, s.phone, s.score, s.type, s.address_line_1, s.address_line_2, s.neighborhood, s.city, s.state, s.country
+	//  FROM store s
+	//  WHERE id = $1
 	GetStoreByID(ctx context.Context, id pgtype.UUID) (GetStoreByIDRow, error)
 	//IsOwner
 	//
@@ -55,6 +59,15 @@ type Querier interface {
 	//      updated_at = NOW()
 	//  WHERE id = $1 AND owner_id = $2
 	UpdateStore(ctx context.Context, arg UpdateStoreParams) error
+	//UpsertBusinessHours
+	//
+	//  INSERT INTO business_hour(store_id, week_day, opening_time, closing_time)
+	//  VALUES ($1, $2, $3, $4)
+	//  ON CONFLICT (store_id, week_day)
+	//  DO UPDATE SET
+	//    opening_time = EXCLUDED.opening_time,
+	//    closing_time = EXCLUDED.closing_time
+	UpsertBusinessHours(ctx context.Context, arg []UpsertBusinessHoursParams) *UpsertBusinessHoursBatchResults
 }
 
 var _ Querier = (*Queries)(nil)
